# tool

./: CMakeLists.txt  README.md
ci/: android-ci.yml  centos-ci.yml  ios-ci.yml  linux-ci.yml
demo/: CMakeLists.txt  base64.cpp  base64.h  main.cpp  md5.cpp  md5.h  pdf2img.cpp  pdf2img.h  runtime_config.yaml  word2img.cpp  word2img.h  xie_debug.cpp  xie_debug.h  xie_filesystem.cpp  xie_filesystem.h
doc/: 合同比较流程.md  返回格式.md
openapi/: 1.0.0.openapi.yaml
src/: Area.cpp  Area.h  BoundBox.cpp  BoundBox.h  Context.h  DocNode.cpp  DocNode.h  Document.cpp  Document.h  Page.cpp  Page.h  Table.cpp  Table.h  TextLine.cpp  TextLine.h  XChar.cpp  XChar.h  contract_compare.cpp  contract_compare.h  contract_compare_c.cpp  contract_compare_c.h  diff.cpp  diff.h  diff_str.cpp  str_utils.cpp  str_utils.h  thread_pool.hpp  version.cpp  xie_debug.h  xie_log.cpp  xie_log.h
src/zss/: AnnotatedTree.h  CostModel.h  Node.h  zss.cpp  zss.h
tools/: test.py
